--- a/index.html
+++ b/index.html
@@ -127,19 +127,23 @@
                 </table>
             </div>
 
-            <div id="incomeChart">
-                <h3>Monthly Income Chart</h3>
+            <div class="chart-container">
+                <div id="incomeChart">
+                  <h3>Monthly Income Chart</h3>
                 <canvas id="monthlyIncomeChart"></canvas>
             </div>
+        </div>
 
             <div id="expenseList">
                 <h3>Expense List</h3>
                 <ul id="expenseItems"></ul>
             </div>
-            <div id="expenseChart">
-                <h3>Monthly Expense Chart</h3>
+            <div class="chart-container">
+                <div id="expenseChart">
+                  <h3>Monthly Expense Chart</h3>
                 <canvas id="monthlyExpenseChart"></canvas>
             </div>
+        </div>
             
         </div>
     </div>
